# AVATAR

./: .bashrc  .gitignore  AVATAR2022.code-workspace  Makefile  README.md  SRDC_output.txt  a_to_d_run.sh  a_to_w_local.sh  a_to_w_run.sh  amazon_count.csv  count_numitems.ipynb  d_to_a_run.sh  d_to_w_run.sh  main.py  memo.md  opts.py  playground.py  pretrain_avatar_lsf.sh  pretrain_avatar_office31.sh  pyproject.toml  reflownet.code-workspace  run_a_c.sh  run_a_p.sh  run_a_r.sh  run_avatar.sh  run_c_a.sh  run_c_p.sh  run_c_r.sh  run_office31.sh  run_office_home.sh  run_office_home_local.sh  run_p_a.sh  run_p_c.sh  run_p_r.sh  run_r_a.sh  run_r_c.sh  run_r_p.sh  slurm-4550670.out  slurm-4550676.out  slurm-4567715.out  (+15 more)
data/: prepare_data.py
docs/: .devcontainer  Dockerfile  paper_review.tex
models/: dino.py  model_construct.py  resnet.py  utils.py  vision_transformer.py  vit.py
src/: folder.py  helper.py  image_dataloader.py  kernel_kmeans.py  losses.py  main.py  resnet.py  train.py  validation.py
tests/: test_sample1.py
tsne/: label_df_epoch0.csv  office31_adapt_amazon2webcam_bs32_resnet50_lr0.0001_domain-adv_dis-src_dis-tar_dis-feat-src_dis-feat-tar_conf-pseudo-label_tsne_label_df_epoch1.csv  office31_adapt_amazon2webcam_bs32_resnet50_lr0.0001_domain-adv_dis-src_dis-tar_dis-feat-src_dis-feat-tar_conf-pseudo-label_tsne_label_df_epoch10.csv  office31_adapt_amazon2webcam_bs32_resnet50_lr0.0001_domain-adv_dis-src_dis-tar_dis-feat-src_dis-feat-tar_conf-pseudo-label_tsne_label_df_epoch100.csv  (+1196 more)
utils/: folder.py  kernel_kmeans.py  prepare_data.py
(+675 files in other folders)
