[tool.poetry]
name = "avatar"
version = "0.1.0"
description = ""
authors = ["junkataoka <jkataok1@binghamton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
